// Vitest Snapshot v1

exports[`InputNumber > renders without crashing 1`] = `
<div>
  <div
    class="lunatic-input-number"
  >
    <input
      aria-invalid="false"
      aria-labelledby="label-input"
      class=""
      id="input"
      inputmode="numeric"
      lang="en"
      required=""
      step="1"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber > should handle readOnly 1`] = `
<div>
  <div
    class="lunatic-input-number"
  >
    <input
      aria-invalid="false"
      aria-labelledby="label-number"
      class=""
      id="number"
      inputmode="numeric"
      lang="en"
      readonly=""
      required=""
      step="1"
      type="text"
      value="123"
    />
  </div>
</div>
`;
